Fixed mount point

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,4 @@ services:
     volumes:
       - type: bind
         source: ./scripts/custom-cron
-        target: /etc/cron.d/
+        target: /etc/cron.d/custom-cron
